Added JS function to change change background color and set text to suitable contrast color

--- a/HTML/main.html
+++ b/HTML/main.html
@@ -6,10 +6,10 @@
 		<title>Lorem ipsum dolor sit amet </title> 
 	</head>
 
-	<body>
+	<body id="body">
 		<div id="topnavbar">
 			<p>
-				<button id="test" onmousedown="changeContrast('mainbody')">
+				<button id="test" onmousedown="darken('body', '0', '0', '0')">
 					Change contrast
 				</button>
 			</p>
