--- a/HTML/main.html
+++ b/HTML/main.html
@@ -9,9 +9,11 @@
 	<body id="body">
 		<div id="topnavbar">
 			<p>
-				<button id="test" onmousedown="darken('body', '0', '0', '0')">
-					Change contrast
-				</button>
+				<input type="radio" name="theme" value="Dark" onclick="darken('body', '0', '0', '0');">
+					Dark
+				<input type="radio" name="theme" value="Light" onclick="darken('body', '256', '256', '256');">
+					Light
+				<br>
 			</p>
 		</div>
 
