--- a/HTML/Page 2.html
+++ b/HTML/Page 2.html
@@ -21,43 +21,7 @@
 		<div id="leftmenuinner">
 			<h1>Sidebar</h1>
 			<h2>Header 2</h2>
-			<p><a href="Page 2.html">Lorem ipsum</a></p>
-			<p>Lorem ipsum</p>
-			<p>Lorem ipsum</p>
-			<p>Lorem ipsum</p>
-			<p>Lorem ipsum</p>
-			<p>Lorem ipsum</p>
-			<p>Lorem ipsum</p>
-			<p>Lorem ipsum</p>
-			<p>Lorem ipsum</p>
-			<p>Lorem ipsum</p>
-			<p>Lorem ipsum</p>
-			<p>Lorem ipsum</p>
-			<p>Lorem ipsum</p>
-			<p>Lorem ipsum</p>
-			<p>Lorem ipsum</p>
-			<p>Lorem ipsum</p>
-			<p>Lorem ipsum</p>
-			<p>Lorem ipsum</p>
-			<p>Lorem ipsum</p>
-			<p>Lorem ipsum</p>
-			<p>Lorem ipsum</p>
-			<p>Lorem ipsum</p>
-			<p>Lorem ipsum</p>
-			<p>Lorem ipsum</p>
-			<p>Lorem ipsum</p>
-			<p>Lorem ipsum</p>
-			<p>Lorem ipsum</p>
-			<p>Lorem ipsum</p>
-			<p>Lorem ipsum</p>
-			<p>Lorem ipsum</p>
-			<p>Lorem ipsum</p>
-			<p>Lorem ipsum</p>
-			<p>Lorem ipsum</p>
-			<p>Lorem ipsum</p>
-			<p>Lorem ipsum</p>
-			<p>Lorem ipsum</p>
-			<p>Lorem ipsum</p>
+			<p>You have achieved enlightenment</p>
 		</div>
 		</div>
 
