Added background images

--- a/HTML/Page 2.html
+++ b/HTML/Page 2.html
@@ -21,7 +21,9 @@
 		<div id="leftmenuinner">
 			<h1>Sidebar</h1>
 			<h2>Header 2</h2>
-			<p>You have achieved enlightenment</p>
+			<p><a href="main.html">
+				You have achieved enlightenment
+			</a></p>
 		</div>
 		</div>
 
