--- a/HTML/main.html
+++ b/HTML/main.html
@@ -21,7 +21,7 @@
 		<div id="leftmenuinner">
 			<h1>Sidebar</h1>
 			<h2>Header 2</h2>
-			<p><a href="Page 2.html">Lorem ipsum</a></p>
+			<p><a href="Page%202.html">Lorem ipsum</a></p>
 			<p>Lorem ipsum</p>
 			<p>Lorem ipsum</p>
 			<p>Lorem ipsum</p>
